--- a/hw02/index.html
+++ b/hw02/index.html
@@ -6,6 +6,8 @@
   <body>
     <h1>Animate!</h1>
     <canvas id="animator" height="600" width="600" style="border:1px solid #0000FF"></canvas>
+    <button id="circle">Circle!</button>
+    <button id="clear">Clear</button>
   </body>
   <script src="animate.js"></script>
 </html>
