--- a/hw04/index.html
+++ b/hw04/index.html
@@ -1,22 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head> 
-    <title>SVG Demo 2</title> 
+    <title>SVG Circles</title> 
   </head>
-
   <body>
-    <svg id="vimage" height="500" width="500" style="border: 1px solid;">
-      
-
-
-
-
-
-      <!--                  
-      <circle cx="250" cy="250" r="75" fill="yellow" stroke="black" />
-      <rect x="100" y="100" width="300" height="75" fill="blue" />
-      -->
-    </svg>
+    <svg id="vimage" height="500" width="500" style="border: 1px solid;"></svg>
+    <button id="circle">Circle</button>
+    <button id="stop">Stop</button>
   </body>
   <script src="interactive.js"></script>
 </html>
