--- a/lorem_ipsum/index.html
+++ b/lorem_ipsum/index.html
@@ -10,7 +10,11 @@
     <p>Meatball rump pork chop venison beef ribs pork belly, short ribs prosciutto chicken jerky. Flank spare ribs venison meatball shankle ribeye kevin strip steak tenderloin short ribs. Tongue tenderloin picanha meatball doner hamburger pig venison. Fatback t-bone alcatra ground round short loin biltong tongue chicken pork belly. Cupim t-bone shoulder, pancetta turkey pork loin hamburger flank chuck tri-tip pork jowl venison ground round bacon. Leberkas turducken tenderloin, shoulder cupim frankfurter doner ball tip.</p>
     <p>Short loin ham shoulder, meatball boudin brisket ground round venison turducken spare ribs pork sirloin. Bresaola sausage fatback hamburger boudin ham turkey, biltong kevin ribeye pork. Biltong short loin sausage, short ribs hamburger fatback kevin brisket bacon bresaola salami kielbasa. Jerky shoulder ham venison brisket bacon sirloin jowl kielbasa. Brisket pancetta pastrami pig tenderloin swine.</p>
   </body>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.js" charset="utf-8">
+  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+  <!-- Note to self: JS inside a script tag with a src is ignored -->
+  <script>
+    console.log("hello, it's me");
     d3.selectAll("p").style("color","blue");
+    d3.select("body").style("background-color","orange");
   </script>
 </html>
