--- a/hw05/index.html
+++ b/hw05/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>The Republican Party: A Clown Fiesta</title>
-    <link rel="stylesheet" type="text/css" href="CSS/styles.css">
+    <link rel="stylesheet" type="text/css" href="/CSS/styles.css">
   </head>
 
   <body>
