Refactored style.css

--- a/testhtml/home.html
+++ b/testhtml/home.html
@@ -6,7 +6,39 @@
 
     <!-- {{{yield-styles}}} -->
     <link rel="stylesheet" type="text/css" href="style.css">
+    <style>
+      #absence-btn{
+      background-color: #ff4d4d;
+      font-size: 50px;
+      padding: 50px 50px;
+      display: block;
+      margin: 50px auto auto auto;
+      }
 
+      #excuse-btn{
+      background-color: #ff9900;
+      font-size: 50px;
+      padding: 50px 50px;
+      display: block;
+      margin: 50px auto auto auto;
+      }
+      
+      #logo{
+      height: 20%;
+      width: 10%;
+      position: fixed;
+      top: 0px;
+      left: 0px;
+      }
+
+      #profile-btn{
+      background-color: #00b359;
+      font-size: 40px;
+      padding: 30px 30px;
+      display: block;
+      margin: 50px auto auto auto;
+      }
+    </style>
   </head>
   <body>
 
@@ -22,9 +54,9 @@
     <!-- This logout feature should be on all pages too -->
 
     <h1 class="heading">ONLINE ABSENCE NOTE WEBSITE</h1>
-    <button id="absence" class="btn">Create New<br>Absence Note</button>
-    <button id="excuse" class="btn">Create New<br>Eary Excuse Form</button>
-    <button id="profile" class="btn">View Profile</button>
+    <button id="absence-btn" class="btn">Create New<br>Absence Note</button>
+    <button id="excuse-btn" class="btn">Create New<br>Eary Excuse Form</button>
+    <button id="profile-btn" class="btn">View Profile</button>
 
   </body>
 </html>
