tfw you refactor wrong

--- a/testhtml/absence.html
+++ b/testhtml/absence.html
@@ -6,7 +6,9 @@
 
     <!-- {{{yield-styles}}} -->
     <link rel="stylesheet" type="text/css" href="style.css">
-    
+    <style>
+      
+    </style>
   </head>
   <body>
 
